<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hadmap2osm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ge89yes@tum.de">oliver</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>lanelet2_extension</depend>

  <exec_depend>lanelet2_io</exec_depend>
  <exec_depend>lanelet2_core</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
