<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parellel_prediction</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ge89yes@tum.de">oliver</maintainer>
  <license>TODO: License declaration</license>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>typing</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>math</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
